@@ -69,6 +69,8 @@ Changes log
           Reported by Patrick Logan.
         - Fixed GAE compilation issue in ByteUtils.getStream() method.
           Contribution by Marcelo Ochoa.
+        - Fixed issue with redirections in first resource example.
+          Reported by Philippe Mougin.
      - Enhancements
         - Added support of the "xml:base" attibute when parsing Atom 
           Publishing documents.
